fix: fix header stretch beyond grid size, fix incorrect col resize ghost position when scrollLeft > 0, "highlight" null values

--- a/packages/web-console/src/styles/_grid.scss
+++ b/packages/web-console/src/styles/_grid.scss
@@ -48,6 +48,10 @@ $row-height: 55px;
   color: #50fa7b;
 }
 
+.qg-null {
+  color: #939393;
+}
+
 .qg-header-row,
 .qg-r {
   white-space: nowrap;
